# meta-openenv-hackathon

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test.py
envs/: __init__.py  models.py  simulator.py
scripts/: baseline.py
server/: app.py
